# Core-Library-for-Entropy-Generation-and-Secure-Randomness

./: CHANGELOG.md  CHEAT_SHEET.md  CMakeLists.txt  COMECE_AQUI.txt  COMO_USAR_HTML_E_C.md  COMPLETION_SUMMARY.txt  CORRECOES_APLICADAS.md  CORRECOES_APLICADAS.txt  ENGINEERING_REPORT.md  FUNCOES.md  GUIA_DEMONSTRACAO.txt  GUIA_INTERFACE.txt  INDEX.md  INSTALL.md  INTEGRATION_GUIDE.md  LIBRARY.md  LICENSE  MAPA.md  Makefile  PATCHES_SEGURANCA.txt  QUICK_START.md  README.md  README_AUTH.md  RELATORIO_VULNERABILIDADES.txt  RESUMO_FINAL_HTML_E_C.txt  SOLUCAO_CREDENCIAIS.txt  SUMMARY_PT-BR.md  agle.pc.in  cliente_auth.html  create_project.sh  criar_usuario_teste.sh  exemplo_simples  exemplo_simples.c  iniciar_auth.sh  password_validator  password_validator.c  senha_segura.html  servidor_auth  servidor_auth.c  test_validator.sh  (+3 more)
cmake/: AGLEConfig.cmake.in
examples/: agle_examples.c  agle_quickstart.c  example_api_tokens.c  example_auth_system.c  example_password_gen.c
include/: agle.h
meu_app_seguro/: .gitignore  Makefile  README.md  agle.c  agle.h  main.c
src/: agle.c
